test/reject/fma_requires_float_racks.rk
crunch invalid_fma(a: f32s, b: f32s, c: f32s) -> f32s:
  | result: f32s <| fma(a, b, true)
  return result
